Fix jQuery path error

--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
     <p class="mt-5 mb-3 text-muted">&copy; 2018-2019</p>
   </form>
 
-  <script src="../static/js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+  <script src="../static/js/jquery-3.4.1/jquery.min.js"></script>
   <script src="../static/js/popper-1.15.0/popper.min.js"></script>
   <script src="../static/js/bootstrap-4.3.1/bootstrap.min.js"></script>
 </body>
